src/main/java/com/example/PRJ321x_ASM3_truongvhFX20894/funix/edu/vn/error/NotFoundException.java
package com.example.PRJ321x_ASM3_truongvhFX20894.funix.edu.vn.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }

    public NotFoundException(String message, Throwable cause) {
        super(message, cause);
    }

    public NotFoundException(Throwable cause) {
        super(cause);
    }
}
